# django-crawling-test-project

./: .ignore  README.md  pyproject.toml
banner/: admin.py  models.py  urls.py  views.py
banner/migrations/: 0001_initial.py  0002_alter_bannerbanner_session_id.py
config/: settings.py  urls.py
crawler/: crawler.py  crawler_hl.py  test_proxies_chatgpt.py  test_proxies_cursor.py
templates/: banner.html  index.html
