[project]
name = "django-crawling-test-project"
version = "0.1.0"
description = ""
authors = [
    {name = "bluebamus",email = "bluebamus@naver.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "selenium (>=4.28.0,<5.0.0)",
    "fake-useragent (>=2.0.3,<3.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "requests[socks] (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
